Resolved spacing issues in menu

--- a/css/ink-local.scss
+++ b/css/ink-local.scss
@@ -103,11 +103,6 @@ header {
 	text-decoration: none;
 }
 
-.right-drawer .items li a span {
-	margin-right: .875em;
-	font-weight: 300;
-}
-
 .right-drawer .items li:hover {
 	color: #fff;
 	background: $top-background
